<?xml version="1.0"?>
<package format="2">
    <!-- required tags -->
    <name>statemachine</name>
    <version>1.0.0</version>
    <description>
        This package holds various statemachines 
    </description>
    <maintainer email="ntrinite@students.kennesaw.edu">Noah Trinite</maintainer>
    <license>This was just required for compilation</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>roslaunch</exec_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>nodelet</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>nodelet</exec_depend>

    <!-- OUR LIBRIES -->
    <build_depend>behaviors</build_depend>      
    <build_depend>arduino-ros</build_depend>

    <!-- export nodelets -->
    <export>

    </export>
</package>